<resources>
    <string name="app_name">OurTube</string>
    <string name="logo_description">Thematic communist propaganda</string>
    <string name="ourtube">OurTube</string>
    <string name="motto">Рабочие мира, объединяйтесь!</string>
    <string name="download_from_youtube">Download Youtube link</string>
    <string name="search_for_video">Search for video</string>
    <string name="video_url_hint">Enter Youtube video link</string>
    <string name="download">Download</string>
    <string name="enter_search_term">Enter video name</string>
    <string name="text_temp">temp text</string>
    <string name="spotify_link">Enter Spotify link</string>
    <string name="spotify_button">Download from Spotify</string>
    <string name="download_all">Download All</string>
</resources>