<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logoView"
        android:layout_width="205dp"
        android:layout_height="149dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ourtube_logo" />

    <TextView
        android:id="@+id/mottoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/motto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ourtube"
        android:textColor="#070000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView" />

    <Button
        android:id="@+id/ytLinkButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/red_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/download_from_youtube"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mottoTextView" />

    <Button
        android:id="@+id/ytSearchButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/red_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/search_for_video"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ytLinkButton" />
</androidx.constraintlayout.widget.ConstraintLayout>